--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ line-length = 120
 testpaths = ["tests"]
 
 [tool.coverage.run]
-source = ["app"]
+source = ["src"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
