--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,17 @@
-# https://github.com/BogDAAAMN/deta-deploy-action
-
 name: Deploy
 
 on:
   release:
-    types:
-      - published
+    types: [ published ]
 
 jobs:
-  build:
+  main:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: BogDAAAMN/deta-deploy-action@v1.0.1
+      - name: "Deploy app to Deta"
+        uses: BogDAAAMN/deta-deploy-action@v1.0.1
         with:
           deta-access-token: ${{ secrets.DETA_TOKEN }}
           deta-name: 'random-user-agent'
