--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,32 +7,26 @@ on:
       - "src/**"
       - "pyproject.toml"
       - "tests/**"
-  pull_request:
-    branches: [ master ]
-    paths:
-      - "src/**"
-      - "pyproject.toml"
-      - "tests/**"
 
 jobs:
-  build:
+  main:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.9"
       - uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
-      - run: poetry install
+      - run: poetry install --with test
 
       - name: "Run PyTest with coverage"
         run: poetry run pytest --cov --cov-report=xml
 
       - name: "Upload coverage report to Codecov"
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         with:
           fail_ci_if_error: true
 
