--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: "3.x"
       - uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
@@ -27,7 +27,5 @@ jobs:
 
       - name: "Upload coverage report to Codecov"
         uses: codecov/codecov-action@v3
-        with:
-          fail_ci_if_error: true
 
         timeout-minutes: 30
