--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,7 @@ jobs:
       - name: "Run cargo-tarpaulin"
         uses: actions-rs/tarpaulin@v0.1
         with:
+          version: "0.25.2"
           args: "--test-threads 1"
 
       - name: "Upload coverage report to Codecov"
