--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,8 @@ name: Test
 
 on:
   push:
-    branches: [ master, test_actions ]
-#    paths: [ "src", "Cargo.toml" ]
+    branches: [ master ]
+    paths: [ "src", "Cargo.toml" ]
 
 jobs:
   main:
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Generate code coverage
-        run: cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
+        run: cargo tarpaulin --all-features --timeout 120 --out xml
 
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v3
